优化,测试:Kotlin语法, 图片处理速度优化(未知测试周期) 调试: 无
新增:
无

优化:
将部分代码改为Kotlin语法
修改部分过时代码

修复:
无